Set initial Version values